# qmk-layout-helper

./: .gitignore  Cargo.toml  README.md
.github/assets/workflows/: workflow.yml
.github/workflows/: workflow.yml
data/: keys.json
src/: basic_keycode_label.rs  cli.rs  hid_worker.rs  key_matrix.rs  keyboard.rs  keyboard_info.rs  keyboard_layout.rs  keycode_label.rs  main.rs  overlay.rs  overlay_window.rs  settings.rs  settings_window.rs  tray.rs
src/keycode_labels/: advanced.rs  basic.rs  constants.rs  keycode_label.rs  layer.rs  mod.rs
