[package]
name = "qmk-layout-helper"
license = "GPL-3.0-only"
description = "QMK layout viewer"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/qmk-layout-helper"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
eframe = "0.28.1"
qmk-via-api = "0.5.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
winit = "0.27.0"