[package]
name = "qmk-layout-helper"
license = "GPL-3.0-only"
description = "QMK layout viewer"
authors = ["Stephan Rumswinkel"]
repository = "https://github.com/srwi/qmk-layout-helper"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
tray-icon = "0.21.2"
eframe = "0.32.0"
qmk-via-api = { version = "0.5.0", default-features = false }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
winit = "0.30.12"
image = "0.25.6"
egui-phosphor = "0.10"